--- a/index.html
+++ b/index.html
@@ -29,5 +29,7 @@
     <input type="submit" value="Generate csv"/>
   </form>
 
+  <script type="text/javascript" src="js/lastfm-export.js"></script>
+
 </body>
 </html>
