partially working code snippet

--- a/test/index.html
+++ b/test/index.html
@@ -16,6 +16,8 @@
     <script src="tests.js"></script>
 
     <script type="text/javascript" src="../bower_components/reqwest/reqwest.js"></script>
+    <script type="text/javascript" src="../bower_components/FileSaver/FileSaver.js"></script>
+    <script type="text/javascript" src="../bower_components/async/lib/async.js"></script>
     <script type="text/javascript" src="../js/lastfm-export.js"></script>
 
     <script>
