--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
   </form>
 
   <script type="text/javascript" src="bower_components/reqwest/reqwest.js"></script>
+  <script type="text/javascript" src="bower_components/FileSaver/FileSaver.js"></script>
+  <script type="text/javascript" src="bower_components/async/lib/async.js"></script>
   <script type="text/javascript" src="js/lastfm-export.js"></script>
 
 </body>
