stubbed out result section

--- a/index.html
+++ b/index.html
@@ -17,8 +17,16 @@
         <input type="text" class="form-control input-lg" placeholder="lastfm username" name="lastfm-user">
       </div>
 
-      <button type="submit" class="btn btn-default btn-lg">Submit</button>
+      <button type="submit" class="btn btn-primary btn-lg">Submit</button>
     </form>
+
+    <div class="well">
+      <p>
+        <span class="label label-success">1/200 pages</span>
+        <span class="label label-danger">2 errors</span>
+      </p>
+      <p><a class="btn btn-info" href="#download">download <small>xkb</small></a></p>
+    </div>
 
     <script src="bower_components/reqwest/reqwest.js"></script>
     <script src="bower_components/FileSaver/FileSaver.js"></script>
