use better library for csv

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
     <script src="bower_components/reqwest/reqwest.js"></script>
     <script src="bower_components/FileSaver/FileSaver.js"></script>
     <script src="bower_components/async/lib/async.js"></script>
+    <script src="bower_components/comma-separated-values/csv.js"></script>
     <script src="js/lastfm-export.js"></script>
 
     <script src="bower_components/jquery/dist/jquery.js"></script>
