--- a/test/index.html
+++ b/test/index.html
@@ -18,6 +18,7 @@
     <script type="text/javascript" src="../bower_components/reqwest/reqwest.js"></script>
     <script type="text/javascript" src="../bower_components/FileSaver/FileSaver.js"></script>
     <script type="text/javascript" src="../bower_components/async/lib/async.js"></script>
+    <script type="text/javascript" src="../bower_components/comma-separated-values/csv.js"></script>
     <script type="text/javascript" src="../js/lastfm-export.js"></script>
 
     <script>
