--- a/index.html
+++ b/index.html
@@ -115,11 +115,12 @@
 
       rivets.bind(document, state)
 
+
       var data = [], bytes = 0;
 
       $('[href=#download]').on('click', function(){
         b = new Blob(data, {type: 'text/csv'})
-        saveAs(b, ($('[name=lastfm-user').val()||"lastFM") + '.csv')
+        saveAs(b, ($('[name=lastfm-user]').val()||"lastFM") + '.csv')
       })
 
       $('form').on('submit', function(e){
@@ -133,7 +134,7 @@
 
         var delay = $('request-delay').val() || 200,
             key   = $('api-key').val() || 'c2899b0774a2eda7769be6eefddd94b6',
-            user  = $('[name=lastfm-user').val();
+            user  = $('[name=lastfm-user]').val();
 
         lastFM(requestData(key, user))
         .fail(function (err, msg) {
