--- a/index.html
+++ b/index.html
@@ -31,10 +31,6 @@
       <button type="submit" class="btn btn-primary btn-lg"  rv-disabled="submitted">Fetch tracks</button>
     </form>
 
-
-    <h3>[note: currently only downloads first 10 pages]</h3>
-
-
     <section id="results" rv-show="submitted">
       <h1>{ status }</h1>
       <!--p>
@@ -42,15 +38,18 @@
           retries: <span data-bind="retries">-</span>
         </span>
         &nbsp;
-        <span class="label label-danger">
-          errors: <span data-bind="errors">-</span>
-        </span>
-      </p-->
+      -->
       <p>
-        <a class="btn btn-info" href="#download" rv-class-x="complete">
+        <span class="label label-danger" rv-show="errors">
+          errors: <span data-bind="errors">{ errors }</span>
+        </span>
+      </p>
+      <p>
+        <a class="btn" href="#download" rv-class-btn-success="complete" rv-class-btn-info="incomplete < complete">
           Save 
           <small>{ kb }kb</small>
         </a>
+        <a href="#cancel" rv-show="incomplete < complete">cancel</a>
         <span class="help-block">a partial file can be saved while fetching more data</span>
       </p>
     </section>
@@ -73,22 +72,20 @@
               <label for="api-key">
                 alternate api key
               </label>
-              <input type="text" class="form-control input-md" id="api-key" placeholder="0123456789abcdef0123456789abcdef">
+              <input type="text" class="form-control input-md" id="api-key" placeholder="0123456789abcdef0123456789abcdef" rv-value="api_key">
               <p class="help-block">Use an alternative api key - generate one at <a href="http://www.last.fm/api">last.fm/api</a></p>
             </div>
             <div class="form-group">
               <label for="request-delay">
                 request delay
               </label>
-              <input type="text" class="form-control input-md" id="request-delay" placeholder="200">
-              <p class="help-block">(milliseconds, default 200) how long to wait between making requests</p>
+              <input type="text" class="form-control input-md" id="request-delay" placeholder="0"  rv-value="request_delay">
+              <p class="help-block">(milliseconds, default 0) how long to wait between making requests</p>
             </div>
           </div>
         </div>
       </div>
     </div>
-
-
 
 
 
@@ -110,7 +107,19 @@
         kb:         0,
         submitted:  false,
         user_error: false,
-        complete:   false
+        complete:   false,
+        errors: 0,
+
+        // settings
+        api_key:'',
+        request_delay:'',
+
+        cancelled: false,
+
+
+        incomplete: function(){
+          return !this.complete
+        }
       };
 
       rivets.bind(document, state)
@@ -118,9 +127,15 @@
 
       var data = [], bytes = 0;
 
-      $('[href=#download]').on('click', function(){
-        b = new Blob(data, {type: 'text/csv'})
+      $('[href=#download]').on('click', function(e){
+        e.preventDefault();
+        var b = new Blob(data, {type: 'text/csv'})
         saveAs(b, ($('[name=lastfm-user]').val()||"lastFM") + '.csv')
+      })
+
+      $('[href=#cancel]').on('click', function(e){
+        e.preventDefault();
+        state.cancelled = true;
       })
 
       $('form').on('submit', function(e){
@@ -128,11 +143,12 @@
 
         state.submitted = true;
         state.user_error = false;
+        state.errors = 0;
 
         // the data that will be filled with csv
         data = [];
 
-        var delay = $('request-delay').val() || 200,
+        var delay = $('request-delay').val() || 0,
             key   = $('api-key').val() || 'c2899b0774a2eda7769be6eefddd94b6',
             user  = $('[name=lastfm-user]').val();
 
@@ -148,7 +164,7 @@
           var current = 0;
           
           var requests = requestList(key, username, page_count)
-            .slice(0,10)
+            // .slice(0,5)
             .map(function(r, i){
               return {
                 data:r,
@@ -157,6 +173,8 @@
             })
 
           async.eachSeries(requests, function(item, callback){
+            if(state.cancelled) return callback(false);
+
             state.status = "fetching page " + (item.i+1) + "/" + page_count;
             lastFM(item.data)
             .then(extractTracks)
@@ -166,12 +184,15 @@
               bytes+= blb.size;
               state.kb = Math.round(bytes/1024);
             })
+            .fail(function(){
+              state.errors++;
+            })
             .always(function(){
-              callback(false);
+              setTimeout(callback, parseInt(state.request_delay || '0', 10), false);
             })
           }, function(){
-            state.status = "downloaded " + (10||page_count) + " pages";
-            $('[href=#download]').attr('class','btn btn-success');
+            state.status = "finished";
+            state.complete = true;
           })
 
         })
