--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <button type="submit" class="btn btn-primary btn-lg"  rv-disabled="submitted">Fetch tracks</button>
     </form>
 
-    <section id="results" rv-show="submitted">
+    <section id="results" rv-show="submitted" style="display:none">
       <h1>{ status }</h1>
       <!--p>
         <span class="label label-warning">
