Allow multiple LastFM profiles to be cached locally.

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/dexie/dist/latest/Dexie.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
-    <script src="js/ting.js"></script>
+    <script src="js/ds_lastfm_local.js"></script>
     <script type="text/javascript">
       //hook up the export to the page
 
@@ -180,7 +180,7 @@
             state.status = "fetching page " + (item.i) + "/" + page_count;
             lastFM(item.data)
             .then(extractTracks)
-            .then(saveTracks.bind(undefined, user))
+            .then(LocalDb.saveTracks.bind(undefined, user))
             .then(function(tracks){
               var blb = new Blob([
                 tracks.map(function(d){
@@ -206,12 +206,13 @@
 
       });
   
+    // Register the serviceworker if the browser supports it
     if ('serviceWorker' in navigator) {
-       navigator.serviceWorker.register('/sw.js').then(function(registration) {
-         console.log('registered')
-       }).catch(function(err) {
-        console.log(err)
-       });
+      navigator.serviceWorker.register('/sw.js').then(function(registration) {
+        console.log('ServiceWorker registered', registration)
+      }).catch(function(err) {
+        console.log('ServiceWorker registeration failed', err)
+      });
      }
     </script>
 
