--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script>
+    // we need https for service workers
+    if ((!location.port || location.port == "80") && location.protocol != 'https:') location.protocol = 'https:';
+  </script>
 </head>
 <body>
   <a href="https://github.com/benfoxall/lastfm-to-csv"><img style="position: absolute; top: 0; right: 0; border: 0;" src="gh.png" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png"></a>
@@ -210,7 +214,7 @@
 
     // Register the serviceworker if the browser supports it
     if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('/sw.js').then(function(registration) {
+      navigator.serviceWorker.register('sw.js').then(function(registration) {
         console.log('ServiceWorker registered', registration)
       }).catch(function(err) {
         console.log('ServiceWorker registeration failed', err)
