--- a/v2.html
+++ b/v2.html
@@ -41,16 +41,7 @@
       <button type="submit" class="btn btn-primary btn-lg">Add User</button>
     </form>
 
-    <dl class="dl-horizontal">
-      <dt>READY</dt>
-      <dd id="ui-READY"></dd>
-      
-      <dt>FAILED</dt>
-      <dd id="ui-FAILED"></dd>
-      <dt>SUCCESS</dt>
-      <dd id="ui-SUCCESS"></dd>
-    </dl>
-
+    <div id="content"></div>
 
     <!-- settings modal -->
 
@@ -89,11 +80,12 @@
     <script src="bower_components/dexie/dist/latest/Dexie.js"></script>
     <script src="bower_components/reqwest/reqwest.js"></script>
     <script src="js/ds_lastfm_local.js"></script>
-    <script src="js/v2.js"></script>
-
-
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="bower_components/react/react.js"></script>
+    <script src="js/ui.js"></script>
+
+    <script src="js/v2.js"></script>
     <script>
       // hook up the ui
       $('form').on('submit', function(e){
@@ -108,7 +100,6 @@
 
       });
     </script>
-
 
 
 
