--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <p>
         <a class="btn" href="#download" rv-class-btn-success="complete" rv-class-btn-info="incomplete < complete">
           Save 
-          <small>{ kb }kb</small>
+          <small>{ kb } KB</small>
         </a>
         <a href="#cancel" rv-show="incomplete < complete">cancel</a>
         <span class="help-block">a partial file can be saved while fetching more data</span>
